# r-quality-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_example.R
r_quality_analyzer/: __init__.py  analyzer.py  cli.py  lintr_analyzer.py
r_quality_analyzer/domain/: __init__.py  file_analyzer.py  parsing.py  repository_analyzer.py
r_quality_analyzer/domain/metrics/: __init__.py  base.py  cbo.py  cyclomatic_complexity.py  lcom.py  loc.py  mpc.py  nom.py  paradigm.py
r_quality_analyzer/infrastructure/: __init__.py  cli.py  repositories.py
